# search

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  run_build  run_debug_build  run_release_build
include/search/: best_first_search.hpp  breadth_first_search.hpp  depth_first_search.hpp  event.hpp  helpers.hpp  iterative_deepening_search.hpp  map_problem.hpp  node.hpp  problem.hpp  result.hpp  solution.hpp  uniform_cost_search.hpp
include/search/best_first/: README.md  best_first_search.hpp  breadth_first_search.hpp  depth_first_search.hpp  uniform_cost_search.hpp
include/search/example_problems/: grid_problem.hpp
include/search/informed/: a_star_search.hpp  greedy_best_first_search.hpp
include/search/uninformed/: README.md  best_first_search.hpp  breadth_first_search.hpp  iterative_deepening_search.hpp  uniform_cost_search.hpp
include/search/uninformed/best_first/: README.md  breadth_first_search.hpp  depth_first_search.hpp  uniform_cost_search.hpp
src/: main.cpp
src/examples/: 1000_by_1000_grid_state_space.cpp  a_star_with_events.cpp  ids.cpp  small_state_space.cpp
src/examples/informed/: 1000_by_1000_grid_state_space.cpp
src/examples/uninformed/: 1000_by_1000_grid_state_space.cpp  ids.cpp  small_state_space.cpp
test/: README.md  test_grid_problem.cpp  test_helpers.cpp
